--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<!-- saved from url=(0024)https://www.jianavi.com/ -->
 <html style="font-size: 40px;"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	
-	<title>简约导航</title>
+	<title>米洛導航</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<meta content="telephone=no,email=no" name="format-detection">
 	<meta content="yes" name="apple-mobile-web-app-capable">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-touch-fullscreen" content="yes">
-	<meta name="keywords" content="简约导航">
-	<meta name="description" content="一个简单美观可自定义的网址导航">
+	<meta name="keywords" content="米洛導航">
+	<meta name="description" content="一個簡單美觀的網址導航">
 	<link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/appexplore/cdn/jianavi@v2.3/favicon.ico">
 	<link rel="stylesheet" type="text/css" href="./简约导航_files/style.min.css">
 	<link rel="stylesheet" type="text/css" href="./简约导航_files/yidong.min.css">
-	<!-- 本项目开源地址：https://github.com/appexplore/jianavi 请勿完全抄袭源码，请勿声明自己是原创 -->
 </head>
 
 <body>
