--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 		<form name="f" action="https://www.google.com/search" target="_blank">
 			<div class="Select-box-2" id="baidu">
 				<ul style="height: 48px;">
-					<li class="this_s">谷 歌</li>
-					<li class="miji_s">duck</li>
-					<li class="bing_s">必 應</li>
-					<li class="google_s">谷 歌</li>
-					<li class="baidu_s">百 度</li>
+					<li class="this_s">Google</li>
+					<li class="miji_s">Duck</li>
+					<li class="bing_s">Bing</li>
+					<li class="google_s">Google</li>
+					<li class="baidu_s">Baidu</li>
 				</ul>
 			</div>
 			<div class="in5">
@@ -74,6 +74,29 @@
 	<div class="body">
 		<div class="content">
 			<div class="jianjie">
+				<div class="jj-list">
+					<div class="jj-list-tit">學習 · 生活</div>
+					<ul class="jj-list-con _b">
+						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
+						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
+						<li><a href="http://heungto.edu.hk" class="link-3" target="_blank" rel="nofollow">學校</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
+						<li><a href="https://www.amap.com/" class="link-3" target="_blank" rel="nofollow">地图</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
+						<li><a href="https://translate.google.com/" class="link-3" target="_blank" rel="nofollow">翻译</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
+						<li><a href="https://hao.qq.com/qita/youxiang.html" class="link-3" target="_blank" rel="nofollow">邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
+						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
+						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
+						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
+						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
+						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
+						<li><a href="http://heungto.edu.hk" class="link-3" target="_blank" rel="nofollow">學校</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
+						<li><a href="https://www.amap.com/" class="link-3" target="_blank" rel="nofollow">地图</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
+						<li><a href="https://translate.google.com/" class="link-3" target="_blank" rel="nofollow">翻译</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
+						<li><a href="https://hao.qq.com/qita/youxiang.html" class="link-3" target="_blank" rel="nofollow">邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
+						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
+						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
+						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
+					</ul>
+				</div>
 				<div class="jj-list">
 					<div class="jj-list-tit">學習 · 生活</div>
 					<ul class="jj-list-con _b">
