--- a/index.html
+++ b/index.html
@@ -75,16 +75,14 @@
 		<div class="content">
 			<div class="jianjie">
 				<div class="jj-list">
-					<div class="jj-list-tit">學習 · 生活</div>
+					<div class="jj-list-tit">學習 · 學校</div>
 					<ul class="jj-list-con _b">
-						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
-						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
-						<li><a href="http://heungto.edu.hk" class="link-3" target="_blank" rel="nofollow">學校</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
-						<li><a href="https://www.amap.com/" class="link-3" target="_blank" rel="nofollow">地图</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
-						<li><a href="https://translate.google.com/" class="link-3" target="_blank" rel="nofollow">翻译</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
-						<li><a href="https://hao.qq.com/qita/youxiang.html" class="link-3" target="_blank" rel="nofollow">邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
-						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
-						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
+						<li><a href="http://heungto.edu.hk/" class="link-3" target="_blank" rel="nofollow">香島中學</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
+						<li><a href="http://eclass.heungto.edu.hk/" class="link-3" target="_blank" rel="nofollow">香島中學eClass</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
+						<li><a href="https://dictionary.cambridge.org/dictionary/english/" class="link-3" target="_blank" rel="nofollow">劍橋字典</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
+						<li><a href="https://www.diyifanwen.com/" class="link-3" target="_blank" rel="nofollow">第一範文網</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
+						<li><a href="https://resources.hkedcity.net/" class="link-3" target="_blank" rel="nofollow">教學資源庫</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
+						<li><a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/" class="link-3" target="_blank" rel="nofollow">粵語審音配詞字庫</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
 						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
 						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
 						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
@@ -95,100 +93,6 @@
 						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
 						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
 						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">學習 · 生活</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
-						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
-						<li><a href="http://heungto.edu.hk" class="link-3" target="_blank" rel="nofollow">學校</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
-						<li><a href="https://www.amap.com/" class="link-3" target="_blank" rel="nofollow">地图</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
-						<li><a href="https://translate.google.com/" class="link-3" target="_blank" rel="nofollow">翻译</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
-						<li><a href="https://hao.qq.com/qita/youxiang.html" class="link-3" target="_blank" rel="nofollow">邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
-						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
-						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
-						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
-						<li><a href="https://www.taobao.com/" class="link-3" target="_blank" rel="nofollow">淘寶</a><div class="i_r_edit" onclick="zyd_edit(&#39;0&#39;);"></div></li>
-						<li><a href="https://www.jd.com/" class="link-3" target="_blank" rel="nofollow">京东</a><div class="i_r_edit" onclick="zyd_edit(&#39;1&#39;);"></div></li>
-						<li><a href="http://heungto.edu.hk" class="link-3" target="_blank" rel="nofollow">學校</a><div class="i_r_edit" onclick="zyd_edit(&#39;2&#39;);"></div></li>
-						<li><a href="https://www.amap.com/" class="link-3" target="_blank" rel="nofollow">地图</a><div class="i_r_edit" onclick="zyd_edit(&#39;3&#39;);"></div></li>
-						<li><a href="https://translate.google.com/" class="link-3" target="_blank" rel="nofollow">翻译</a><div class="i_r_edit" onclick="zyd_edit(&#39;4&#39;);"></div></li>
-						<li><a href="https://hao.qq.com/qita/youxiang.html" class="link-3" target="_blank" rel="nofollow">邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;5&#39;);"></div></li>
-						<li><a href="https://www.runoob.com/" class="link-3" target="_blank" rel="nofollow">菜鸟教程</a><div class="i_r_edit" onclick="zyd_edit(&#39;6&#39;);"></div></li>
-						<li><a href="https://study.163.com/" class="link-3" target="_blank" rel="nofollow">云课堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;7&#39;);"></div></li>
-						<li><a href="https://www.icourse163.org/" class="link-3" target="_blank" rel="nofollow">MOOC</a><div class="i_r_edit" onclick="zyd_edit(&#39;8&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">常用 · 社区</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://wx.qq.com/" class="link-3" target="_blank" rel="nofollow">微信</a><div class="i_r_edit" onclick="zyd_edit(&#39;9&#39;);"></div></li>
-						<li><a href="https://weibo.com/" class="link-3" target="_blank" rel="nofollow">微博</a><div class="i_r_edit" onclick="zyd_edit(&#39;10&#39;);"></div></li>
-						<li><a href="https://www.zhihu.com/" class="link-3" target="_blank" rel="nofollow">知乎</a><div class="i_r_edit" onclick="zyd_edit(&#39;11&#39;);"></div></li>
-						<li><a href="https://tieba.baidu.com/" class="link-3" target="_blank" rel="nofollow">贴吧</a><div class="i_r_edit" onclick="zyd_edit(&#39;12&#39;);"></div></li>
-						<li><a href="http://www.soomal.com/" class="link-3" target="_blank" rel="nofollow">Soomal</a><div class="i_r_edit" onclick="zyd_edit(&#39;13&#39;);"></div></li>
-						<li><a href="https://topbook.cc/overview" class="link-3" target="_blank" rel="nofollow">Topbook</a><div class="i_r_edit" onclick="zyd_edit(&#39;14&#39;);"></div></li>
-						<li><a href="https://github.com/" class="link-3" target="_blank" rel="nofollow">GitHub</a><div class="i_r_edit" onclick="zyd_edit(&#39;15&#39;);"></div></li>
-						<li><a href="https://www.douban.com/" class="link-3" target="_blank" rel="nofollow">豆瓣</a><div class="i_r_edit" onclick="zyd_edit(&#39;16&#39;);"></div></li>
-						<li><a href="https://www.v2ex.com/" class="link-3" target="_blank" rel="nofollow">V2EX</a><div class="i_r_edit" onclick="zyd_edit(&#39;17&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">影音 · 娱乐</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://www.youtube.com/" class="link-3" target="_blank" rel="nofollow">YouTube</a><div class="i_r_edit" onclick="zyd_edit(&#39;18&#39;);"></div></li>
-						<li><a href="https://v.qq.com/" class="link-3" target="_blank" rel="nofollow">腾讯视频</a><div class="i_r_edit" onclick="zyd_edit(&#39;19&#39;);"></div></li>
-						<li><a href="https://www.bilibili.com/" class="link-3" target="_blank" rel="nofollow">哔哩哔哩</a><div class="i_r_edit" onclick="zyd_edit(&#39;20&#39;);"></div></li>
-						<li><a href="https://www.mgtv.com/" class="link-3" target="_blank" rel="nofollow">芒果TV</a><div class="i_r_edit" onclick="zyd_edit(&#39;21&#39;);"></div></li>
-						<li><a href="https://www.youku.com/" class="link-3" target="_blank" rel="nofollow">优酷</a><div class="i_r_edit" onclick="zyd_edit(&#39;22&#39;);"></div></li>
-						<li><a href="https://music.163.com/" class="link-3" target="_blank" rel="nofollow">音乐</a><div class="i_r_edit" onclick="zyd_edit(&#39;23&#39;);"></div></li>
-						<li><a href="https://www.dikotv.com/" class="link-3" target="_blank" rel="nofollow">顶空影视</a><div class="i_r_edit" onclick="zyd_edit(&#39;24&#39;);"></div></li>
-						<li><a href="https://www.jjmj.tv/" class="link-3" target="_blank" rel="nofollow">九九美剧</a><div class="i_r_edit" onclick="zyd_edit(&#39;25&#39;);"></div></li>
-						<li><a href="http://www.zzzfun.com/" class="link-3" target="_blank" rel="nofollow">ZzzFun</a><div class="i_r_edit" onclick="zyd_edit(&#39;26&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">发现 · 世界</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://news.ifeng.com/" class="link-3" target="_blank" rel="nofollow">凤凰资讯</a><div class="i_r_edit" onclick="zyd_edit(&#39;27&#39;);"></div></li>
-						<li><a href="https://ef.zhiweidata.com/" class="link-3" target="_blank" rel="nofollow">知微事见</a><div class="i_r_edit" onclick="zyd_edit(&#39;28&#39;);"></div></li>
-						<li><a href="https://sspai.com/" class="link-3" target="_blank" rel="nofollow">少数派</a><div class="i_r_edit" onclick="zyd_edit(&#39;29&#39;);"></div></li>
-						<li><a href="https://jikipedia.com/" class="link-3" target="_blank" rel="nofollow">小鸡词典</a><div class="i_r_edit" onclick="zyd_edit(&#39;30&#39;);"></div></li>
-						<li><a href="https://jandan.net/" class="link-3" target="_blank" rel="nofollow">煎蛋</a><div class="i_r_edit" onclick="zyd_edit(&#39;31&#39;);"></div></li>
-						<li><a href="https://youquhome.com/" class="link-3" target="_blank" rel="nofollow">有趣网址</a><div class="i_r_edit" onclick="zyd_edit(&#39;32&#39;);"></div></li>
-						<li><a href="https://ac.scmor.com/" class="link-3" target="_blank" rel="nofollow">思谋学术</a><div class="i_r_edit" onclick="zyd_edit(&#39;33&#39;);"></div></li>
-						<li><a href="https://houxu.app/" class="link-3" target="_blank" rel="nofollow">后续</a><div class="i_r_edit" onclick="zyd_edit(&#39;34&#39;);"></div></li>
-						<li><a href="https://www.soukuzhan.com/" class="link-3" target="_blank" rel="nofollow">搜酷站</a>
-						<div class="i_r_edit" onclick="zyd_edit(&#39;35&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">在线 · 工具</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://www.photopea.com/" class="link-3" target="_blank" rel="nofollow">在线PS</a><div class="i_r_edit" onclick="zyd_edit(&#39;36&#39;);"></div></li>
-						<li><a href="https://cowtransfer.com/" class="link-3" target="_blank" rel="nofollow">收发文件</a><div class="i_r_edit" onclick="zyd_edit(&#39;37&#39;);"></div></li>
-						<li><a href="https://cli.im/" class="link-3" target="_blank" rel="nofollow">二维码</a><div class="i_r_edit" onclick="zyd_edit(&#39;38&#39;);"></div></li>
-						<li><a href="https://www.linshiyouxiang.net/" class="link-3" target="_blank" rel="nofollow">临时邮箱</a><div class="i_r_edit" onclick="zyd_edit(&#39;39&#39;);"></div></li>
-						<li><a href="https://www.materialtools.com/" class="link-3" target="_blank" rel="nofollow">临时短信</a><div class="i_r_edit" onclick="zyd_edit(&#39;40&#39;);"></div></li>
-						<li><a href="https://convertio.co/zh/" class="link-3" target="_blank" rel="nofollow">格式转换</a><div class="i_r_edit" onclick="zyd_edit(&#39;41&#39;);"></div></li>
-						<li><a href="http://www.html22.com/zh/" class="link-3" target="_blank" rel="nofollow">文档下载</a><div class="i_r_edit" onclick="zyd_edit(&#39;42&#39;);"></div></li>
-						<li><a href="https://weibomiaopai.com/" class="link-3" target="_blank" rel="nofollow">视频下载</a><div class="i_r_edit" onclick="zyd_edit(&#39;43&#39;);"></div></li>
-						<li><a href="https://www.eggvod.cn/music/" class="link-3" target="_blank" rel="nofollow">音乐下载</a><div class="i_r_edit" onclick="zyd_edit(&#39;44&#39;);"></div></li>
-					</ul>
-				</div>
-				<div class="jj-list">
-					<div class="jj-list-tit">搜索 · 资源</div>
-					<ul class="jj-list-con _b">
-						<li><a href="https://www.cupfox.com/" class="link-3" target="_blank" rel="nofollow">茶杯狐</a><div class="i_r_edit" onclick="zyd_edit(&#39;45&#39;);"></div></li>
-						<li><a href="https://www.dy2018.com/" class="link-3" target="_blank" rel="nofollow">电影天堂</a><div class="i_r_edit" onclick="zyd_edit(&#39;46&#39;);"></div></li>
-						<li><a href="http://vip.yeyulingfeng.com/" class="link-3" target="_blank" rel="nofollow">VIP解析</a><div class="i_r_edit" onclick="zyd_edit(&#39;47&#39;);"></div></li>
-						<li><a href="https://soft.appts.cn/" class="link-3" target="_blank" rel="nofollow">常用软件</a><div class="i_r_edit" onclick="zyd_edit(&#39;48&#39;);"></div></li>
-						<li><a href="https://www.coolist.net/" class="link-3" target="_blank" rel="nofollow">酷软清单</a><div class="i_r_edit" onclick="zyd_edit(&#39;49&#39;);"></div></li>
-						<li><a href="https://www.ghxi.com/" class="link-3" target="_blank" rel="nofollow">果核剥壳</a><div class="i_r_edit" onclick="zyd_edit(&#39;50&#39;);"></div></li>
-						<li><a href="https://www.jiumodiary.com/" class="link-3" target="_blank" rel="nofollow">电子书</a><div class="i_r_edit" onclick="zyd_edit(&#39;51&#39;);"></div></li>
-						<li><a href="https://pixabay.com/zh/photos/" class="link-3" target="_blank" rel="nofollow">图片素材</a><div class="i_r_edit" onclick="zyd_edit(&#39;52&#39;);"></div></li>
-						<li><a href="https://zhengbanxianmian.com/" class="link-3" target="_blank" rel="nofollow">软件限免</a><div class="i_r_edit" onclick="zyd_edit(&#39;53&#39;);"></div></li>
 					</ul>
 				</div>
 				<!-- 自定义按钮start -->
