--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 			<!-- 开源不易，请勿去除下方版权信息 -->
 			<!-- 如果您想修改下方版权信息，请打赏并留言您的网址 >> https://afdian.net/@appts -->
 
-			<div style="text-align:center;color:#ffffff">Copyright © 2021
+			<div style="text-align:center;color:#ffffff">
+				Copyright © 2021 米洛導航 改編自
 				<a href="https://www.appts.cn/" style="color:#ffffff;" target="_blank" rel="nofollow">软件探索 </a>
-				<a href="https://support.qq.com/products/93263" style="color:#ffffff;" target="_blank" rel="nofollow">反馈</a>
-				<a href="https://www.kancloud.cn/appexplore/support/2247036" style="color:#ffffff;" target="_blank" rel="nofollow">支持我们 </a>
+				<a href="https://www.jianavi.com/" style="color:#ffffff;" target="_blank" rel="nofollow">簡約導航</a>
 			</div>
 		</div>
 		<!-- 底部版权end -->
