--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 				</div>
 				<!-- 自定义按钮end -->
 			</div>
-			<div>
-				<img src="/20201001-20201201_HTMS_2020-2021_Timetable of 3B_(Half-time because of COVID-19).jpg" align="middle">
+			<div style="text-align:center;color:white">
+				課程表
+				<img src="./20201001-20201201_HTMS_2020-2021_Timetable of 3B_(Half-time because of COVID-19).jpg" align="middle">
 			</div>
 			<!-- 内容end -->
 
