--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         .nav h3 {
             margin: 0;
-            background-color: #f0ffff;
+            background-color: #7fffd4;
             padding: 5px 10px;
             font-weight: normal;
             font-size: 16px;
@@ -75,6 +75,12 @@
             left: 0px;
             padding: 1px 3px;
         }
+        
+        .footer {
+            color: black;
+            margin: 10px;
+            text-align: center;
+        }
     </style>
     <script>
         $(function() {
@@ -103,20 +109,9 @@
 <body>
     <div style="max-width:1000px; margin:10px auto;">
         <div class="nav">
-            <h3>类别一 <i></i></h3>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <div class="clear"></div>
-        </div>
-        <div class="nav">
-            <h3>类别二 <i></i></h3>
-            <a href="http://www.网址.com">网址</a>
+            <h3>學校 · 學習<i></i></h3>
+            <a href="http://heungto.edu.hk/">香島中學</a>
+            <a href="http://eclass.heungto.edu.hk/">eClass</a>
             <a href="http://www.网址.com">网址</a>
             <a href="http://www.网址.com">网址</a>
             <a href="http://www.网址.com">网址</a>
@@ -125,23 +120,8 @@
             <a href="http://www.网址.com">网址</a>
             <div class="clear"></div>
         </div>
-        <div class="nav">
-            <h3>类别三<i></i></h3>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <div class="clear"></div>
+        <div class="footer">
+            Copyright © 2021 米洛導航 | 最後更新：2021-05-27
         </div>
     </div>
 </body>
