--- a/index.html
+++ b/index.html
@@ -76,6 +76,13 @@
             padding: 1px 3px;
         }
         
+        .header {
+            color: black;
+            text-align: center;
+            margin: 20px;
+            font-size: 20px;
+        }
+        
         .footer {
             color: black;
             margin: 10px;
@@ -108,6 +115,9 @@
 
 <body>
     <div style="max-width:1000px; margin:10px auto;">
+        <div class="header">
+            米洛導航
+        </div>
         <div class="nav">
             <h3>學校 · 學習<i></i></h3>
             <a href="http://heungto.edu.hk/">香島中學</a>
@@ -121,7 +131,7 @@
             <div class="clear"></div>
         </div>
         <div class="footer">
-            Copyright © 2021 米洛導航 | 最後更新：2021-05-27
+            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 19:44
         </div>
     </div>
 </body>
