--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 <body>
     <div style="max-width:1000px; margin:10px auto;">
         <div class="header">
-            米洛導航
+            <b>米洛導航</b>
         </div>
         <div class="nav">
-            <h3>學校 · 學習<i></i></h3>
+            <h3><b>學校 · 學習</b><i></i></h3>
             <a href="http://heungto.edu.hk/">香島中學</a>
             <a href="http://eclass.heungto.edu.hk/">eClass</a>
             <a href="http://www.网址.com">网址</a>
@@ -109,7 +109,7 @@
             <div class="clear"></div>
         </div>
         <div class="footer">
-            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 20:42
+            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 20:47
         </div>
     </div>
 </body>
