--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
             color: black;
             text-align: center;
             margin: 20px;
-            font-size: 20px;
+            font-size: 35px;
         }
         
         .footer {
             color: black;
-            margin: 10px;
+            margin: 15px;
             text-align: center;
         }
     </style>
@@ -97,19 +97,19 @@
             <b>米洛導航</b>
         </div>
         <div class="nav">
-            <h3><b>學校 · 學習</b><i></i></h3>
+            <h3><b>學業 · 學習資源</b><i></i></h3>
             <a href="http://heungto.edu.hk/">香島中學</a>
             <a href="http://eclass.heungto.edu.hk/">eClass</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
-            <a href="http://www.网址.com">网址</a>
+            <a href="https://tw.voicetube.com/">VoiceTube</a>
+            <a href="https://www.diyifanwen.com/">第一範文網</a>
+            <a href="https://dictionary.cambridge.org/">Cambridge Dictionary</a>
+            <a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>
+            <a href="https://www.schooland.hk/">升學天地</a>
             <a href="http://www.网址.com">网址</a>
             <div class="clear"></div>
         </div>
         <div class="footer">
-            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 20:47
+            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 20:59
         </div>
     </div>
 </body>
