--- a/index.html
+++ b/index.html
@@ -106,10 +106,22 @@
             <a href="https://humanum.arts.cuhk.edu.hk/Lexis/lexi-can/">粵語審音配詞字庫</a>
             <a href="https://www.schooland.hk/">升學天地</a>
             <a href="https://mathsolver.microsoft.com/">Microsoft Math Solver</a>
+            <a href="https://app.grammarly.com/">Grammarly</a>
+            <a href="http://student.hk/">一站式學生資訊網站</a>
+            <div class="clear"></div>
+        </div>
+        <div class="nav">
+            <h3><b>生活 · 出行</b><i></i></h3>
+            <a href="https://www.hko.gov.hk/">香港天文臺</a>
+            <a href="http://www.derc.org.hk/">藥物資源中心</a>
+            <a href="https://wikihow.com/">WikiHow</a>
+            <a href="https://www.hkemobility.gov.hk/tc/traffic-information/live/cctv">香港出行易</a>
+            <a href="https://www.hko.gov.hk/tc/gts/time/digital_clock.html">網上时鐘（精簡版）</a>
+            <a href="https://www.online-stopwatch.com/">Online Stopwatch</a>
             <div class="clear"></div>
         </div>
         <div class="footer">
-            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 21:06
+            Copyright © 2021 米洛導航 | 最後更新：2021-05-27 21:21 香港
         </div>
     </div>
 </body>
